--- a/simple.html
+++ b/simple.html
@@ -23,7 +23,7 @@
 			Not sure if we should replace this or not
 	</main>
 	<footer class="container">
-		<p>&copy; Jason Taylor 2014</p>
+		<p>&copy; 2014 Git.Training, All rights reservers</p>
 	</footer>
 </body>
 </html>
