--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 
 
 <head>
-	<title>Silly Changes on Master</title>
+	<title>Updating Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,8 +19,7 @@
 	<main class="container">
 	<!-- Junk Filler Content -->
 		<p>
-			Just stuff now,
-			Not sure if we should replace this or not
+			Adding more important content here.
 	</main>
 	<footer class="container">
 		<p>&copy; 2014 Git.Training, All rights reservers</p>
